--- a/package.json
+++ b/package.json
@@ -82,6 +82,11 @@
     "@storybook/mdx2-csf": "^0.0.4",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-docs": "^6.5.16",
+    "@storybook/cli": "^6.5.16",
+    "@storybook/components": "^6.5.16",
+    "@storybook/core-events": "^6.5.16",
+    "@storybook/theming": "^6.5.16",
     "babel-loader": "^8.3.0",
     "pretty-package-json": "^1.0.0",
     "react": "^18.2.0",
