--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "",
-  "devCommand": "npm run storybook",
-  "installCommand": "",
+  "buildCommand": "yarn storybook:build",
+  "devCommand": "yarn storybook",
+  "installCommand": "yarn install",
   "framework": null,
   "outputDirectory": "./storybook-static"
 }
